[gd_scene load_steps=9 format=3 uid="uid://bt0sdmu5kl0da"]

[ext_resource type="PackedScene" uid="uid://bx7lro2cy3saf" path="res://Scenes/GameStart.tscn" id="1_nvk75"]
[ext_resource type="PackedScene" uid="uid://b4v44wio4k8bo" path="res://Scenes/LightCycleSceneBot.tscn" id="2_0wjhb"]
[ext_resource type="PackedScene" uid="uid://bcvbx8ke04n3b" path="res://Scenes/LightCycleScenePlayer.tscn" id="3_xx08i"]
[ext_resource type="PackedScene" uid="uid://o3wxu1jes2xv" path="res://Scenes/Interface.tscn" id="3_yo5sf"]
[ext_resource type="PackedScene" uid="uid://c1jpl7f4ioirb" path="res://Scenes/Map.tscn" id="4_35hls"]
[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="6_vbhkn"]

[sub_resource type="Sky" id="Sky_lm20o"]

[sub_resource type="Environment" id="Environment_jl37f"]
background_mode = 2
background_energy_multiplier = 3.0
sky = SubResource("Sky_lm20o")
ambient_light_color = Color(8.66354e-07, 0.484575, 0.648657, 1)
ambient_light_energy = 2.0
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0, 0.226878, 0.260686, 1)
fog_aerial_perspective = 0.1

[node name="Main" type="Node3D"]

[node name="Game" type="Node3D" parent="."]

[node name="Interface" parent="Game" instance=ExtResource("3_yo5sf")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Game"]
environment = SubResource("Environment_jl37f")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Game"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 333.669, 0)
light_color = Color(0, 0.766758, 0.90271, 1)
light_energy = 2.0
light_indirect_energy = 2.0
light_volumetric_fog_energy = 4.0

[node name="Map" parent="Game" instance=ExtResource("4_35hls")]

[node name="LightCycleScenePlayer" parent="Game" instance=ExtResource("3_xx08i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="LightCycleSceneBotA" parent="Game" instance=ExtResource("2_0wjhb")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 234.086, 0.5, 370.84)

[node name="LightCycleSceneBotA2" parent="Game" instance=ExtResource("2_0wjhb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -98.6217, 0.5, -442.635)

[node name="LightCycleSceneBotA3" parent="Game" instance=ExtResource("2_0wjhb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -164.232, 0.5, 370.84)

[node name="LightCycleSceneBotA4" parent="Game" instance=ExtResource("2_0wjhb")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 255.26, 0.5, -387.362)

[node name="LightCycleSceneBotA5" parent="Game" instance=ExtResource("2_0wjhb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -330.24, 0.5, 370.84)

[node name="LightCycleSceneBotA6" parent="Game" instance=ExtResource("2_0wjhb")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 388.416, 0.5, 227.887)

[node name="LightCycleSceneBotA7" parent="Game" instance=ExtResource("2_0wjhb")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 386, 0.5, -8.15961)

[node name="LightCycleSceneBotA8" parent="Game" instance=ExtResource("2_0wjhb")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -331, 0.5, -214.16)

[node name="LightCycleSceneBotA9" parent="Game" instance=ExtResource("2_0wjhb")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -420.111, 0.5, -399.718)

[node name="LightCycleSceneBotA10" parent="Game" instance=ExtResource("2_0wjhb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 52, 0.5, 370.84)

[node name="GameStart" type="Node3D" parent="."]

[node name="GameStartScreen" parent="GameStart" instance=ExtResource("1_nvk75")]

[node name="Managers" type="Node" parent="."]

[node name="GameManager" type="Node" parent="Managers"]
script = ExtResource("6_vbhkn")
